--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-toastify": "^11.0.5",
     "sentiment": "^5.0.2",
     "speakeasy": "^2.0.0",
-    "tailwind-variants": "^1.0.0"
+    "tailwind-variants": "^1.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
